--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,58 @@
-body {
-    background-color: aqua;
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-image: url(../images/wall.png);
+    background-size:150px;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 90px;
+    width: 100%;
+    background-color: #000000;
+    color: #ffffff;
+    border-bottom: 5px solid #ffd700;
+}
+
+.panel {
+ margin: 1rem;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+
+.square {
+    height: 9.2rem;
+    border: 1px solid #0000ff;
+    width: 9.2rem;
+    background-color: #7fffd4;
+}
+
+.enemy {
+    background-color: #663399;
+    background-image: url(../images/ralph.png);
+    background-position-y: 100%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+
+.menu-lives {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-lives img {
+    width: 60px;
+    align-self: flex-start;
+    margin-right: 1rem;
+}
+
+.menu-time h2:nth-child(2),
+.menu-score h2:nth-child(2) 
+{
+    margin-top: 1rem;
 }
